--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.shiyq</groupId>
-    <artifactId>CampusTrading</artifactId>
+    <artifactId>TradingPlatform</artifactId>
     <version>2.0-SNAPSHOT</version>
 
     <dependencies>
@@ -32,8 +32,14 @@
         <!-- Servlet - JSP -->
         <dependency>
             <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+        </dependency>
+        <!-- 文件上传相关 -->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.4</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet.jsp</groupId>
